<resources>
    <string name="app_name">MovieApp</string>
    <string name="password_text">Password</string>
    <string name="google_text">SIGN IN</string>
    <string name="facebook_text">Facebook</string>
    <string name="signup_text">Don\'t have account? Sign Up</string>
    <string name="email_text">Email</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password_register">Password</string>
    <string name="email_register">Email</string>
    <string name="phone_text">Phone</string>
    <string name="email_login">SIGN IN WITH EMAIL OR MOVIETUBE</string>
    <string name="todo_text">TODO</string>
    <string name="facebook_app_id">205054263413664</string>
    <string name="fb_login_protocol_scheme">fb205054263413664</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="frag_watchlist">Fragment Watchlist</string>
    <string name="frag_home">Home Fragment</string>
    <string name="frag_movies">Movies fragment</string>
    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="title_activity_movie_tabs">ActivityMovieTabs</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_movie_tube_tabs">MovieTubeTabs</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Movies</string>
    <string name="tab_text_3">Watch List</string>
    <string name="title_activity_main_nav">MainNavActivity</string>

    <!-- TODO: Volley & glide string -->
    <string name="anime_title">Anime Title</string>
    <string name="anime_category">Category</string>
    <string name="anime_rating">0.0</string>


    <!-- TODO: MoviesApp strings -->
    <string name="name_movie">Movie Title</string>
    <string name="movie_details">Movie Details</string>
    <string name="plot">Plot Synopsis</string>
    <string name="rating">User Rating</string>
    <string name="release">Release Date</string>
    <string name="pref_sort_order_label">Sort Order</string>
    <string name="pref_sort_order_key">sortOrder</string>
    <string name="pref_most_popular">Most Popular</string>
    <string name="pref_highest_rated">Highest Rated</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
