<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="150dp"
    android:layout_marginTop="5dp"
    android:padding="8dp"
    android:background="#fff"
    >

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:background="@drawable/loading_shape"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="vertical"
        android:layout_margin="8dp"
        >


        <TextView
            android:id="@+id/animeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anime_title"
            android:textStyle="bold"
            android:textSize="18sp"
            />

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/animeCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anime_category"
            />

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/animeRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anime_rating"
            android:background="@drawable/rating_background"
            android:textColor="#fff"
            android:textSize="15sp"
            android:drawableLeft="@drawable/ic_star_rating"
            android:paddingRight="5dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/studio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Studio" />


    </LinearLayout>

</LinearLayout>




