<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hfad.imdblogin.activities.ActivityLoginPage"
    android:background="#000">


    <EditText
        android:id="@+id/editEmailText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:background="#B6B6B4"
        android:drawableLeft="@drawable/ic_action_username"
        android:ems="14"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editPasswordText"
        android:layout_width="300dp"
        android:layout_height="40dp"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="160dp"
        android:background="#B6B6B4"
        android:drawableLeft="@drawable/ic_action_password"
        android:drawableStart="@drawable/ic_action_password"
        android:ems="14"
        android:hint="@string/password_text"
        android:inputType="textPassword" />


    <android.support.v7.widget.CardView
        android:id="@+id/cardViewLogin"
        android:layout_width="150dp"
        android:layout_height="45dp"


        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="77dp"
        app:cardBackgroundColor="#f95109"
        app:cardCornerRadius="9dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/cardViewLogin"
            android:layout_alignLeft="@+id/cardViewLogin"
            android:layout_alignStart="@+id/cardViewLogin"
            android:layout_marginBottom="13dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/email_login"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/emailIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignBaseline="@+id/textView"
                android:layout_alignBottom="@+id/textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:drawableLeft="@drawable/ic_action_email" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <TextView
        android:id="@+id/textViewSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/signup_text"
        android:textColor="#FFF" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        app:srcCompat="@drawable/movieapplogo" />







</RelativeLayout>
