<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.hfad.imdblogin.activities.ActivityLoginPage"
    android:background="#FFF">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_alignLeft="@+id/goToLogin"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/goToLogin"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="59dp"
        android:background="@drawable/signup"
        android:contentDescription="@string/todo_text" />

    <EditText
        android:id="@+id/editEmailText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:background="#B6B6B4"
        android:inputType="textEmailAddress"
        android:ems="14"
        android:hint="@string/email_text"
        />

    <EditText
        android:id="@+id/editPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/editEmailText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="#B6B6B4"
        android:ems="14"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/editPasswordText"
        android:layout_alignRight="@+id/editPasswordText"
        android:layout_below="@+id/editPasswordText"
        android:layout_marginTop="37dp"
        app:cardBackgroundColor="#E5C100"
        app:cardCornerRadius="11dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Sign Up"
                android:textColor="#000"
                android:textSize="24sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/goToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp"
        android:text="Already have an Account? Login"
        android:textColor="#000" />


</RelativeLayout>