<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActivityDetailedAnimeDesc">

    <android.support.design.widget.AppBarLayout
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/appbarlayout_id">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/collapsingToolbar_id"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:title="Anime Title"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            >

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                android:theme="@style/ThemeOverlay.AppCompat.Light">
            </android.support.v7.widget.Toolbar>


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:padding="50dp"

                >

                <ImageView
                    android:id="@+id/aa_thumbnail"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/loading_shape"

                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:orientation="vertical"
                    android:layout_margin="8dp"
                    >


                    <TextView
                        android:id="@+id/aa_animeName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/anime_title"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        />

                    <TextView
                        android:layout_marginTop="5dp"
                        android:id="@+id/aa_animeCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/anime_category"
                        />

                    <TextView
                        android:layout_marginTop="5dp"
                        android:id="@+id/aa_animeRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/anime_rating"
                        android:background="@drawable/rating_background"
                        android:textColor="#fff"
                        android:textSize="15sp"
                        android:drawableLeft="@drawable/ic_star_rating"
                        android:paddingRight="5dp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/aa_studio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Studio" />


                </LinearLayout>

            </LinearLayout>


        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="16dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/aa_description"
            android:text="Anime description"
            />

    </android.support.v4.widget.NestedScrollView>



</android.support.constraint.ConstraintLayout>